encypting password & authorization using jwt

--- a/config.env
+++ b/config.env
@@ -3,3 +3,7 @@ PORT=3000
 DATABASE=<LINK TO MONGODB DATABASE CLUSTER/LOCALHOST LINK>
 DATABASE_PASSWORD=<DATABASE_PASSWORD>
 DATABASE_USERNAME=<DATABASE_USERNAME>
+
+
+JWT_SECRET= <YOUR SECRET SHOULD BE ATLEAST 32 CHARACTER LONG>
+JWT_EXPIRES_IN= <d for day, h for hour, m for minutes>
